# hwp-transformer

./: .gitignore  hangul_util.py  help_tool.py  main.py  main_tool.py  misc.py  pyproject.toml  requirements.txt
text_files/유사문항/15/: problems.txt
text_files/유사문항/17/: problems.txt
text_files/유사문항/19/: problems.txt
